--- a/src/ft/mod/cfg/form/DFormUnit.form
+++ b/src/ft/mod/cfg/form/DFormUnit.form
@@ -156,7 +156,7 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="jlConversionFactor">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Equivalencia base:*"/>
+                    <Property name="text" type="java.lang.String" value="Factor conversi&#xf3;n:*"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 23]"/>
                     </Property>
