--- a/src/ft/mod/stk/form/DFormWsd.form
+++ b/src/ft/mod/stk/form/DFormWsd.form
@@ -82,6 +82,9 @@
                         <Component class="javax.swing.JTextField" name="jtfMoveType">
                           <Properties>
                             <Property name="editable" type="boolean" value="false"/>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Tahoma" size="11" style="1"/>
+                            </Property>
                             <Property name="focusable" type="boolean" value="false"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[225, 23]"/>
