--- a/src/ft/mod/cfg/form/DFormBizPartner.form
+++ b/src/ft/mod/cfg/form/DFormBizPartner.form
@@ -216,6 +216,7 @@
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/sba/lib/img/cmd_std_ok.gif"/>
                     </Property>
+                    <Property name="toolTipText" type="java.lang.String" value="Asignar predeterrminado"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[23, 23]"/>
                     </Property>
