--- a/src/ft/mod/mfg/form/DFormVariable.form
+++ b/src/ft/mod/mfg/form/DFormVariable.form
@@ -112,6 +112,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlUnit">
                       <Properties>
+                        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="66" green="66" red="0" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Unidad:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
