--- a/src/ft/mod/cfg/form/DFormFamily.form
+++ b/src/ft/mod/cfg/form/DFormFamily.form
@@ -129,7 +129,7 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="jlUnit">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Unidad:*"/>
+                    <Property name="text" type="java.lang.String" value="Unidad medida:*"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 23]"/>
                     </Property>
