--- a/src/ft/mod/mfg/form/DFormLine.form
+++ b/src/ft/mod/mfg/form/DFormLine.form
@@ -57,7 +57,7 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="jlDepart">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Departamento:*"/>
+                    <Property name="text" type="java.lang.String" value="Depto. producci&#xf3;n:*"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 23]"/>
                     </Property>
